fix: fixes and add users part